--- a/css/estiloPagina2.css
+++ b/css/estiloPagina2.css
@@ -34,5 +34,20 @@ section h2{
     font-weight: 800;
 }
 
+[data-anime]{
+    opacity: 0;
+    transition: .3s;
+}
+
+[data-anime="left"]{
+    transform: translate3d(50%, 0, 0);
+}
+[data-anime="bottom"]{
+    transform: translate3d(0, 100%, 0);
+}
+[data-anime].animate{
+    opacity: 1;
+    transform: translate3d(0,0,0);
+}
 
 
