--- a/css/estiloPagina2.css
+++ b/css/estiloPagina2.css
@@ -27,6 +27,10 @@ header p > a:hover{
     background-color: var(--cor3); 
     color:#1B20F6 ;  
 }
+section{
+    padding-top: 3%;
+    padding-bottom: 0%;
+}
 
 section h2{
     background-image: linear-gradient(90deg,var(--cor5), transparent );
@@ -36,7 +40,7 @@ section h2{
 
 [data-anime]{
     opacity: 0;
-    transition: .3s;
+    transition: .4s;
 }
 
 [data-anime="left"]{
